<resources>
    <string name="app_name">Mini Shopping App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_to_favorite">Yêu thích</string>
    <string name="share_this_product">Chia sẻ</string>
    <string name="add_product_to_cart">Thêm vào giỏ</string>
    <string name="product_image">Product image</string>
    <string name="nguyen_van_hung">Nguyen Van Hung</string>
    <string name="_0_vnd">0 VND</string>
    <string name="category_hooman">Category: Hooman</string>
    <string name="a_useless_guy">A useless guy</string>
    <string name="related_products">Sản phẩm tương tự</string>
    <string name="no_search_results">Không có sản phẩm thỏa mãn</string>
    <string name="payment">Đơn hàng</string>
    <string name="product_price">Giá sản phẩm</string>
    <string name="shipping_fee">Phí giao hàng</string>
    <string name="vat">VAT</string>
    <string name="_8">8%</string>
    <string name="total_price">Tổng thanh toán</string>
    <string name="delete_all">Xóa tất cả</string>
    <string name="proceed">Đặt hàng</string>
    <string name="no_favorite">Không có sản phẩm yêu thích</string>
    <string name="enter_name_for_finding">Nhập tên sản phẩm để tìm kiếm</string>
    <string name="find">Tìm</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="channel1_name">Channel 1</string>
    <string name="channel1_description">This is channel 1</string>
    <string name="welcome_noti_title">Xin chào</string>
    <string name="welcome_noti_content">Chào mừng bạn đến với MiniShopping! Gì cũng có, gì cũng rẻ!</string>
    <string name="channel2_name">Channel 2</string>
    <string name="channel2_description">This is channel 2</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="set_location">Set location</string>
    <string name="a_product_image">Product image</string>
    <string name="voucher">Voucher</string>
    <string name="san_pham_giam_gia">SẢN PHẨM GIẢM GIÁ</string>
    <string name="click">Sản phẩm hot giảm giá sốc!! Click để xem ngay</string>
    <string name="tet">Bánh giảm giá mùa Tết đến nè!! Click để xem ngay</string>
    <string name="kinh">Kính mát thời trang sành điệu giá rẻ đây!! Click để xem ngay</string>
    <string name="ma_km">MÃ KHUYẾN MÃI</string>
    <string name="quamon">Nhập mã QUAMON để được giảm 100%</string>
    <string name="mobile">Nhập mã MOBILE để được giảm 70%</string>
    <string name="hello">Nhập mã HELLO để được giảm 50%</string>
    <string name="welcome">Nhập mã WELCOME để được giảm 50%</string>
    <string name="image">image</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>